Проверил часть классов